--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-10-30 02:50 -->
+<!-- 2022-10-31 02:50 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -46,47 +46,47 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org47229e6">1. 妙妙文章</a>
+<li><a href="#org8775ddb">1. 妙妙文章</a>
 <ul>
-<li><a href="#org28e9a34">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
-<li><a href="#org7c18a9d">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org2075717">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#orge0074c9">1.4. 关于编辑器</a></li>
-<li><a href="#orgef4593d">1.5. 关于代码</a>
+<li><a href="#org72cce19">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
+<li><a href="#org4192166">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#orgd2df542">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#orge850a8f">1.4. 关于编辑器</a></li>
+<li><a href="#orgdc0fcc5">1.5. 关于代码</a>
 <ul>
-<li><a href="#org39fea7d">1.5.1. Lisp</a></li>
+<li><a href="#orgb94f873">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#org8730e04">1.6. 关于CPU</a></li>
-<li><a href="#orgcd796e0">1.7. 关于算法</a>
+<li><a href="#org5374aea">1.6. 关于CPU</a></li>
+<li><a href="#orgbea2fbf">1.7. 关于算法</a>
 <ul>
-<li><a href="#orge1f5d34">1.7.1. 关于随机</a></li>
+<li><a href="#org99685a9">1.7.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#org293edba">1.8. 关于AI</a></li>
-<li><a href="#org06ddab5">1.9. 关于软件</a>
+<li><a href="#org9293efe">1.8. 关于AI</a></li>
+<li><a href="#orgce1883e">1.9. 关于软件</a>
 <ul>
-<li><a href="#org74facc2">1.9.1. SQLite</a></li>
+<li><a href="#orgdb88401">1.9.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#org69ddfc3">1.10. 关于workflow</a></li>
+<li><a href="#org72efbef">1.10. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#org2c7eb53">2. 棒棒视频</a>
+<li><a href="#org3878783">2. 棒棒视频</a>
 <ul>
-<li><a href="#org8c1dc73">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org7eeb84f">2.2. 各种剧</a></li>
-<li><a href="#org8f392a3">2.3. 电影</a></li>
+<li><a href="#org26db54d">2.1. Veritasium 真理元素</a></li>
+<li><a href="#org945f533">2.2. 各种剧</a></li>
+<li><a href="#orgbffb937">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#orgc75e472">3. 快乐游戏</a></li>
-<li><a href="#org1dcee08">4. 宝藏博主</a></li>
-<li><a href="#org045274f">5. 有意思的</a>
+<li><a href="#orgcc7fe23">3. 快乐游戏</a></li>
+<li><a href="#org39b77f0">4. 宝藏博主</a></li>
+<li><a href="#orgd9a64c9">5. 有意思的</a>
 <ul>
-<li><a href="#org39ff13c">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#orgd64b703">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#org0117ef5">6. 我想玩的</a></li>
+<li><a href="#org43f7172">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -95,8 +95,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-org47229e6" class="outline-2">
-<h2 id="org47229e6"><span class="section-number-2">1.</span> <a href="#org47229e6">妙妙文章</a></h2>
+<div id="outline-container-org8775ddb" class="outline-2">
+<h2 id="org8775ddb"><span class="section-number-2">1.</span> <a href="#org8775ddb">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -433,7 +433,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="org9072c59">
+<figure id="org433b949">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -495,8 +495,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-org28e9a34" class="outline-3">
-<h3 id="org28e9a34"><span class="section-number-3">1.1.</span> <a href="#org28e9a34">关于死亡 &#x2014; 让世界知道我来过</a></h3>
+<div id="outline-container-org72cce19" class="outline-3">
+<h3 id="org72cce19"><span class="section-number-3">1.1.</span> <a href="#org72cce19">关于死亡 &#x2014; 让世界知道我来过</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -537,8 +537,8 @@ Take Umbrage.  Violators Will &#x2026;
 </div>
 </div>
 
-<div id="outline-container-org7c18a9d" class="outline-3">
-<h3 id="org7c18a9d"><span class="section-number-3">1.2.</span> <a href="#org7c18a9d">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-org4192166" class="outline-3">
+<h3 id="org4192166"><span class="section-number-3">1.2.</span> <a href="#org4192166">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><p>
@@ -568,8 +568,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org2075717" class="outline-3">
-<h3 id="org2075717"><span class="section-number-3">1.3.</span> <a href="#org2075717">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-orgd2df542" class="outline-3">
+<h3 id="orgd2df542"><span class="section-number-3">1.3.</span> <a href="#orgd2df542">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -603,8 +603,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-orge0074c9" class="outline-3">
-<h3 id="orge0074c9"><span class="section-number-3">1.4.</span> <a href="#orge0074c9">关于编辑器</a></h3>
+<div id="outline-container-orge850a8f" class="outline-3">
+<h3 id="orge850a8f"><span class="section-number-3">1.4.</span> <a href="#orge850a8f">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><p>
@@ -620,8 +620,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-orgef4593d" class="outline-3">
-<h3 id="orgef4593d"><span class="section-number-3">1.5.</span> <a href="#orgef4593d">关于代码</a></h3>
+<div id="outline-container-orgdc0fcc5" class="outline-3">
+<h3 id="orgdc0fcc5"><span class="section-number-3">1.5.</span> <a href="#orgdc0fcc5">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don't read code like it's a
@@ -646,8 +646,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-org39fea7d" class="outline-4">
-<h4 id="org39fea7d"><span class="section-number-4">1.5.1.</span> <a href="#org39fea7d">Lisp</a></h4>
+<div id="outline-container-orgb94f873" class="outline-4">
+<h4 id="orgb94f873"><span class="section-number-4">1.5.1.</span> <a href="#orgb94f873">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -670,8 +670,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-org8730e04" class="outline-3">
-<h3 id="org8730e04"><span class="section-number-3">1.6.</span> <a href="#org8730e04">关于CPU</a></h3>
+<div id="outline-container-org5374aea" class="outline-3">
+<h3 id="org5374aea"><span class="section-number-3">1.6.</span> <a href="#org5374aea">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><p>
@@ -686,8 +686,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-orgcd796e0" class="outline-3">
-<h3 id="orgcd796e0"><span class="section-number-3">1.7.</span> <a href="#orgcd796e0">关于算法</a></h3>
+<div id="outline-container-orgbea2fbf" class="outline-3">
+<h3 id="orgbea2fbf"><span class="section-number-3">1.7.</span> <a href="#orgbea2fbf">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -706,8 +706,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-orge1f5d34" class="outline-4">
-<h4 id="orge1f5d34"><span class="section-number-4">1.7.1.</span> <a href="#orge1f5d34">关于随机</a></h4>
+<div id="outline-container-org99685a9" class="outline-4">
+<h4 id="org99685a9"><span class="section-number-4">1.7.1.</span> <a href="#org99685a9">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-7-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -721,8 +721,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org293edba" class="outline-3">
-<h3 id="org293edba"><span class="section-number-3">1.8.</span> <a href="#org293edba">关于AI</a></h3>
+<div id="outline-container-org9293efe" class="outline-3">
+<h3 id="org9293efe"><span class="section-number-3">1.8.</span> <a href="#org9293efe">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -732,8 +732,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org06ddab5" class="outline-3">
-<h3 id="org06ddab5"><span class="section-number-3">1.9.</span> <a href="#org06ddab5">关于软件</a></h3>
+<div id="outline-container-orgce1883e" class="outline-3">
+<h3 id="orgce1883e"><span class="section-number-3">1.9.</span> <a href="#orgce1883e">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -744,8 +744,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-org74facc2" class="outline-4">
-<h4 id="org74facc2"><span class="section-number-4">1.9.1.</span> <a href="#org74facc2">SQLite</a></h4>
+<div id="outline-container-orgdb88401" class="outline-4">
+<h4 id="orgdb88401"><span class="section-number-4">1.9.1.</span> <a href="#orgdb88401">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-9-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -759,8 +759,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org69ddfc3" class="outline-3">
-<h3 id="org69ddfc3"><span class="section-number-3">1.10.</span> <a href="#org69ddfc3">关于workflow</a></h3>
+<div id="outline-container-org72efbef" class="outline-3">
+<h3 id="org72efbef"><span class="section-number-3">1.10.</span> <a href="#org72efbef">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-10">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -770,8 +770,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org2c7eb53" class="outline-2">
-<h2 id="org2c7eb53"><span class="section-number-2">2.</span> <a href="#org2c7eb53">棒棒视频</a></h2>
+<div id="outline-container-org3878783" class="outline-2">
+<h2 id="org3878783"><span class="section-number-2">2.</span> <a href="#org3878783">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -827,8 +827,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-org8c1dc73" class="outline-3">
-<h3 id="org8c1dc73"><span class="section-number-3">2.1.</span> <a href="#org8c1dc73">Veritasium 真理元素</a></h3>
+<div id="outline-container-org26db54d" class="outline-3">
+<h3 id="org26db54d"><span class="section-number-3">2.1.</span> <a href="#org26db54d">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You've Never Heard Of</a>
@@ -853,8 +853,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org7eeb84f" class="outline-3">
-<h3 id="org7eeb84f"><span class="section-number-3">2.2.</span> <a href="#org7eeb84f">各种剧</a></h3>
+<div id="outline-container-org945f533" class="outline-3">
+<h3 id="org945f533"><span class="section-number-3">2.2.</span> <a href="#org945f533">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -878,8 +878,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org8f392a3" class="outline-3">
-<h3 id="org8f392a3"><span class="section-number-3">2.3.</span> <a href="#org8f392a3">电影</a></h3>
+<div id="outline-container-orgbffb937" class="outline-3">
+<h3 id="orgbffb937"><span class="section-number-3">2.3.</span> <a href="#orgbffb937">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -914,8 +914,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgc75e472" class="outline-2">
-<h2 id="orgc75e472"><span class="section-number-2">3.</span> <a href="#orgc75e472">快乐游戏</a></h2>
+<div id="outline-container-orgcc7fe23" class="outline-2">
+<h2 id="orgcc7fe23"><span class="section-number-2">3.</span> <a href="#orgcc7fe23">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -945,8 +945,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org1dcee08" class="outline-2">
-<h2 id="org1dcee08"><span class="section-number-2">4.</span> <a href="#org1dcee08">宝藏博主</a></h2>
+<div id="outline-container-org39b77f0" class="outline-2">
+<h2 id="org39b77f0"><span class="section-number-2">4.</span> <a href="#org39b77f0">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -957,7 +957,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa's Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="org04fa961">
+<figure id="org8515690">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -965,8 +965,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org045274f" class="outline-2">
-<h2 id="org045274f"><span class="section-number-2">5.</span> <a href="#org045274f">有意思的</a></h2>
+<div id="outline-container-orgd9a64c9" class="outline-2">
+<h2 id="orgd9a64c9"><span class="section-number-2">5.</span> <a href="#orgd9a64c9">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -998,8 +998,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-org39ff13c" class="outline-3">
-<h3 id="org39ff13c"><span class="section-number-3">5.1.</span> <a href="#org39ff13c">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-orgd64b703" class="outline-3">
+<h3 id="orgd64b703"><span class="section-number-3">5.1.</span> <a href="#orgd64b703">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -1011,8 +1011,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-org0117ef5" class="outline-2">
-<h2 id="org0117ef5"><span class="section-number-2">6.</span> <a href="#org0117ef5">我想玩的</a></h2>
+<div id="outline-container-org43f7172" class="outline-2">
+<h2 id="org43f7172"><span class="section-number-2">6.</span> <a href="#org43f7172">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -1035,7 +1035,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-29 09:22</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-30 02:50</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-31 02:50</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
