--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-10-30 02:50 -->
+<!-- 2022-10-31 02:50 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -46,19 +46,19 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgc3eeb68">1. 暑假</a>
+<li><a href="#org490a7fd">1. 暑假</a>
 <ul>
-<li><a href="#org8a261fc">1.1. 夏令营</a></li>
+<li><a href="#org59c4a53">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#org72330ca">2. 打工</a></li>
-<li><a href="#org468ac21">3. 我的928</a>
+<li><a href="#org3d5b855">2. 打工</a></li>
+<li><a href="#org0e4b822">3. 我的928</a>
 <ul>
-<li><a href="#org6b9efed">3.1. 928演唱会(bushi</a></li>
+<li><a href="#orgbda1682">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#org32ab545">4. 他们的928</a></li>
-<li><a href="#orge17456a">5. 总结</a></li>
+<li><a href="#org8e7f4c1">4. 他们的928</a></li>
+<li><a href="#org3f1d71d">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -68,7 +68,7 @@
 </p>
 
 
-<figure id="orgd5b3942">
+<figure id="org5f8902f">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>南大offer</figcaption>
@@ -91,8 +91,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-orgc3eeb68" class="outline-2">
-<h2 id="orgc3eeb68"><span class="section-number-2">1.</span> <a href="#orgc3eeb68">暑假</a></h2>
+<div id="outline-container-org490a7fd" class="outline-2">
+<h2 id="org490a7fd"><span class="section-number-2">1.</span> <a href="#org490a7fd">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -116,8 +116,8 @@
 </p>
 </div>
 
-<div id="outline-container-org8a261fc" class="outline-3">
-<h3 id="org8a261fc"><span class="section-number-3">1.1.</span> <a href="#org8a261fc">夏令营</a></h3>
+<div id="outline-container-org59c4a53" class="outline-3">
+<h3 id="org59c4a53"><span class="section-number-3">1.1.</span> <a href="#org59c4a53">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -159,8 +159,8 @@
 </div>
 </div>
 
-<div id="outline-container-org72330ca" class="outline-2">
-<h2 id="org72330ca"><span class="section-number-2">2.</span> <a href="#org72330ca">打工</a></h2>
+<div id="outline-container-org3d5b855" class="outline-2">
+<h2 id="org3d5b855"><span class="section-number-2">2.</span> <a href="#org3d5b855">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -174,8 +174,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org468ac21" class="outline-2">
-<h2 id="org468ac21"><span class="section-number-2">3.</span> <a href="#org468ac21">我的928</a></h2>
+<div id="outline-container-org0e4b822" class="outline-2">
+<h2 id="org0e4b822"><span class="section-number-2">3.</span> <a href="#org0e4b822">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -191,8 +191,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-org6b9efed" class="outline-3">
-<h3 id="org6b9efed"><span class="section-number-3">3.1.</span> <a href="#org6b9efed">928演唱会(bushi</a></h3>
+<div id="outline-container-orgbda1682" class="outline-3">
+<h3 id="orgbda1682"><span class="section-number-3">3.1.</span> <a href="#orgbda1682">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -200,7 +200,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="orgbe3b866">
+<figure id="org5936c03">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;2&nbsp; </span>被挡在外面</figcaption>
@@ -212,7 +212,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org9c1223e">
+<figure id="org713a0c1">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;3&nbsp; </span>在观众席上</figcaption>
@@ -225,8 +225,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org32ab545" class="outline-2">
-<h2 id="org32ab545"><span class="section-number-2">4.</span> <a href="#org32ab545">他们的928</a></h2>
+<div id="outline-container-org8e7f4c1" class="outline-2">
+<h2 id="org8e7f4c1"><span class="section-number-2">4.</span> <a href="#org8e7f4c1">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -246,8 +246,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orge17456a" class="outline-2">
-<h2 id="orge17456a"><span class="section-number-2">5.</span> <a href="#orge17456a">总结</a></h2>
+<div id="outline-container-org3f1d71d" class="outline-2">
+<h2 id="org3f1d71d"><span class="section-number-2">5.</span> <a href="#org3f1d71d">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -262,7 +262,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-30 02:50</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-31 02:50</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
